# safe_wren

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  benchmark_results.txt  build.rs  common_test_errors.txt  string_equals_stats.txt  stub_wren_core.wren
fuzz/: .gitignore  Cargo.toml  wren.dict
fuzz/fuzz_targets/: fuzz_target_1.rs
src/: compiler.rs  core.rs  float_to_string.rs  lib.rs  main.rs  test.rs  value.rs  vm.rs  wren.rs  wren_debug.rs
src/ffi/: c_api.rs
src/opt/: random_bindings.rs
test/bringup/: add.wren  call_method_before_defined.wren  class.wren  for.wren  for_nested.wren  function_call.wren  greater_than.wren  if.wren  index_operator.wren  is.wren  locals.wren  method.wren  number_parsing.wren  range.wren  scopes.wren  simple_while.wren
test/fiber/: equality.wren  return_as_yield.wren  return_from_transfer_error.wren  suspend.wren
test/fuzz/: grammar_nesting.wren
test/list/: equality.wren
test/map/: equality.wren  iterate.wren  key_iterate.wren  value_iterate.wren
test/module/scoped/: scoped.wren
test/num/: clamp_min_larger_than_max.wren  shift_overflow.wren  sign_edge.wren
test/super/: super_in_operator.wren
test_results/: benchmark_results.txt  passes.txt  test_expectations.txt
test_results/test/bringup/: add.wren.compile.txt  add.wren.txt  call_method_before_defined.wren.compile.txt  call_method_before_defined.wren.txt  class.wren.compile.txt  (+29 more)
util/: benchmark.py  compare.py  test.py  to_fix.py
wren_test_c/: .gitignore  Makefile  README.md  burndown.txt  example_wren_bindings.rs  premake5.lua  wren_test.make
(+1718 files in other folders)
