[package]
name = "wren_rust"
version = "0.1.0"
authors = ["Eric Seidel <github@eseidel.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-derive = "0.3.3"
num-traits = "0.2.14"

[profile.release] 
debug = true