[package]
name = "safe_wren"
version = "0.1.0"
authors = ["Eric Seidel <github@eseidel.com>"]
edition = "2018"
default-run = "wren_test"
build = "build.rs"
license = "MIT"
description = "A safe, pure-rust implementation of wren.io, drop-in replacement for wren.io's C implementation."
repository = "https://github.com/rubberduckeng/safe_wren"
keywords = ["interpreter", "language", "lua", "embed", "scripting"]
categories = ["compilers"]


[dependencies]
# Used for exposing C bindings in src/ffi/c_apis.rs
libc = "0.2.98"
vmgc = {path = '../vmgc'}

[build-dependencies]
# Used by build.rs
cc = "1.0"

[lib]
# Build a rust library, c library and c static-library
crate-type = ["lib", "cdylib", "staticlib"]

[profile.release]
# Include symbols when debugging
# TODO: Remove this from release, make a new "profile" target?
debug = true
# Ensure .dsym is produced on Mac:
split-debuginfo = "packed"